fix X170 order in sped